# sql

./: Cargo.toml  LICENSE  README.md
attributes/: Cargo.toml
attributes/src/: col.rs  der.rs  fields.rs  idx.rs  impl_body.rs  lib.rs  ser.rs  table_name.rs
orm/: Cargo.toml
orm/src/: col.rs  crud.rs  der.rs  deserializer.rs  error.rs  lib.rs  rdbc.rs  schema.rs  ser.rs  serde.rs  serializer.rs
orm/src/col/: value.rs
orm/src/crud/: insert.rs
orm/src/rdbc/: insert.rs  mod.rs
orm/src/schema/: col.rs  idx.rs  mod.rs
orm/tests/: entity_test.rs
rdbc/: Cargo.toml
rdbc/src/: database.rs  datasource.rs  lib.rs  prepare.rs  rows.rs  statement.rs  transaction.rs  waker.rs
rdbc/src/driver/: connection.rs  driver.rs  mod.rs  statement.rs  transaction.rs
sqlite3/: .gitignore  Cargo.toml  README.md
sqlite3/benches/: cuad_benchmark.rs
sqlite3/src/: async_driver.rs  error.rs  lib.rs  sqlite3_rs.rs  sync_driver.rs  tests.rs
