[package]
edition = "2021"
name = "rdbc-serde"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
log = "0.4.16"
rdbc = {path = "../rdbc"}
serde = "1.0.140"
thiserror = "1.0.31"

[dev-dependencies]
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.3", features = ["async_futures", "html_reports"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
