[package]
edition = "2021"
name = "rdbc-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.56"
futures = {version = "0.3.21"}
log = "0.4.16"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.31"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
