[package]
edition = "2021"
name = "rdbc-sqlite3"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"

log = "0.4.16"
nom = "7.1.1"
rdbc = {path = "../rdbc"}
sqlite3-sys = "0.13.0"
thiserror = "1.0.31"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.1.2"

[dev-dependencies]
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.3", features = ["async_futures", "html_reports"]}
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"

[features]
async-sqlite3 = []

[[bench]]
harness = false
name = "cuad_benchmark"
